# nikita-blend-mode

./: .gitignore  .gitmodules  LICENSE  NP Composite Mode.dctl  README.md
OFX-plugin/: CMakeLists.txt  main.cpp
